[package]
name = "expr"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_expr"
path = "expr.rs"

[dependencies]
libc = "0.2.42"
onig = {git="https://github.com/tempbottle/rust-onig"}
#onig = {path="../../../rust-onig"}
uucore = { path="../uucore" }

[[bin]]
name = "expr"
path = "../../uumain.rs"
